--- a/pipeline_ukbiobank/test/test_stats.ipynb
+++ b/pipeline_ukbiobank/test/test_stats.ipynb
@@ -127,9 +127,7 @@
    "source": [
     "#Q-Q plot for T1w CSA\n",
     "qqnorm(T1w_CSA)\n",
-    "qqline(T1w_CSA, col=\"red\", lwd=2)\n",
-    "#Shapiro wilik normlaity test\n",
-    "shapiro.test(T1w_CSA)"
+    "qqline(T1w_CSA, col=\"red\", lwd=2)\n"
    ]
   },
   {
@@ -164,9 +162,27 @@
    "source": [
     "#Q-Q plot for T2w CSA\n",
     "qqnorm(T2w_CSA)\n",
-    "qqline(T2w_CSA, col=\"red\", lwd=2)\n",
+    "qqline(T2w_CSA, col=\"red\", lwd=2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Shapiro wilik normlaity test\n",
+    "shapiro.test(T1w_CSA)\n",
+    "\n",
     "#Shapiro wilik normlaity test\n",
     "shapiro.test(T2w_CSA)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On ne rejette pas l'hypothèse nulle que l'aire de la section médullaire suit une loi normale puisque p>0.05"
    ]
   },
   {
